@@ -7,9 +7,6 @@ SUBSYSTEM!="scsi_generic", GOTO="pentax_rules_end"
 LABEL="pentax_rules_start"
 # WAIT_FOR_SYSFS="device/vendor"
 ATTRS{vendor}=="PENTAX", ATTRS{model}=="DIGITAL_CAMERA", MODE="0666", GROUP="plugdev"
-ATTRS{vendor}=="PENTAX", ATTRS{model}=="DSC_K-x", MODE="0666", GROUP="plugdev"
-ATTRS{vendor}=="PENTAX", ATTRS{model}=="DSC_K200D", MODE="0666", GROUP="plugdev"
-ATTRS{vendor}=="PENTAX", ATTRS{model}=="DSC_K20D", MODE="0666", GROUP="plugdev"
-ATTRS{vendor}=="PENTAX", ATTRS{model}=="DSC_K-7", MODE="0666", GROUP="plugdev"
+ATTRS{vendor}=="PENTAX", ATTRS{model}=="DSC*", MODE="0666", GROUP="plugdev"
 
 LABEL="pentax_rules_end"
