@@ -4,6 +4,7 @@ version 0.74.01
 	Adding 1/2 EV shutter speed table to GUI
 	Handling camera specific ISO tables (only base iso)
 	--debug switch added
+	Limited support added: istD, istDS2, istDL, K110D, K100D, K-r, K-5. 
 
 version 0.74.00 ( 2011-06-21 )
 	code cleanup: eliminating id2
